--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.container{
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tasks-main{
+  margin-top: 36px;
+  margin-left: 60px;
+  font-family: Avenir Next; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tasks-main__img{
+  background-image: url(./img/main_img.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 1011px;
+  width: 100%;
+  max-height: 790px; 
+  height: 100%;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tasks-main__img-header{
+  font-size: 38px;
+  color: #171717;
+  font-weight: 700;
+  text-align: left;
+}
+
+.tasks-main-blocks{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  gap:35px;
 }
