--- a/src/components/tasks/css/tasks.css
+++ b/src/components/tasks/css/tasks.css
@@ -13,7 +13,8 @@
 .card-section-header{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    margin-left: 20px;
+    justify-content: space-between;
 }
 .card-section-header-descr{
     display: flex;
@@ -28,6 +29,8 @@
 }
 
 .card-section-header-addTask{
+    max-width: 70px;
+    width: 100%;
     padding: 5px;
     font-size: 25px;
     color:#FFFFFF;
