--- a/src/components/tasks/css/task-item.css
+++ b/src/components/tasks/css/task-item.css
@@ -12,13 +12,42 @@
     width: 100%;
 }
 
-.task-item-input{
+.task-item-textArea{
     max-width: 200px;
+    min-width: 200px;
     width: 100%;
     font-size: 14px;
     font-weight: 500;
     border: none;
     cursor: pointer;
-    outline: grey;
+    outline: none;
 }
+.taskRow{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.btnremoveTask{
+    background-image: url(../img/3.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    
+    padding: 15px;
+    max-width: 1px;
+    max-height: 1px; 
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    border: none;
+}
+.btnremoveTask:hover{
+    background-image: url(../img/4.svg);
+}
+/* .task-item-textArea::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
+    box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+    border-radius: 100px;
+} */
 
