--- a/src/components/tasks/css/task-item.css
+++ b/src/components/tasks/css/task-item.css
@@ -45,6 +45,22 @@
 .btnremoveTask:hover{
     background-image: url(../img/4.svg);
 }
+
+.user{
+    display: flex;
+    gap:10px;
+    margin-top: 10px;
+}
+
+.user-status{
+    padding: 5px 4px;
+    background-color: #59B4D1;
+    text-align: center;
+    border-radius: 2px;
+    color: #FFFFFF;
+    font-size: 10px;
+    font-weight: 700;
+}
 /* .task-item-textArea::-webkit-scrollbar-thumb {
     background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
     box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
