--- a/src/components/tasks/css/task-item.css
+++ b/src/components/tasks/css/task-item.css
@@ -26,14 +26,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
-
+.btnRemove{
+    border-radius: 20%;
+}
 .btnremoveTask{
     background-image: url(../img/3.svg);
     background-repeat: no-repeat;
     background-position: center;
-    
     padding: 15px;
     max-width: 1px;
     max-height: 1px; 
@@ -48,9 +48,8 @@
 
 .user{
     display: flex;
-    gap:10px;
-    margin-top: 10px;
-}
+    gap: 10px;
+} 
 
 .user-status{
     padding: 5px 4px;
@@ -61,6 +60,7 @@
     font-size: 10px;
     font-weight: 700;
 }
+
 /* .task-item-textArea::-webkit-scrollbar-thumb {
     background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
     box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
